// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataList Cell default 1`] = `
<div
  className="pf-c-data-list__cell"
>
  Secondary
</div>
`;

exports[`DataList Cells 1`] = `
<div
  className="pf-c-data-list__item-content"
>
  <DataListCell
    className="data-list-custom"
    id="primary-item"
    key="list-id-1"
  >
    Primary Id
  </DataListCell>
  <DataListCell
    className="data-list-custom"
    id="primary-item"
    key="list-id-2"
  >
    Primary Id 2
  </DataListCell>
</div>
`;

exports[`DataList DataList variants Breakpoint - 2xl 1`] = `
<DataList
  aria-label="this is a simple list"
  className=""
  gridBreakpoint="2xl"
  isCompact={false}
  selectedDataListItemId=""
  wrapModifier={null}
>
  <ul
    aria-label="this is a simple list"
    className="pf-c-data-list pf-m-grid-2xl"
  />
</DataList>
`;

exports[`DataList DataList variants Breakpoint - always 1`] = `
<DataList
  aria-label="this is a simple list"
  className=""
  gridBreakpoint="always"
  isCompact={false}
  selectedDataListItemId=""
  wrapModifier={null}
>
  <ul
    aria-label="this is a simple list"
    className="pf-c-data-list pf-m-grid"
  />
</DataList>
`;

exports[`DataList DataList variants Breakpoint - lg 1`] = `
<DataList
  aria-label="this is a simple list"
  className=""
  gridBreakpoint="lg"
  isCompact={false}
  selectedDataListItemId=""
  wrapModifier={null}
>
  <ul
    aria-label="this is a simple list"
    className="pf-c-data-list pf-m-grid-lg"
  />
</DataList>
`;

exports[`DataList DataList variants Breakpoint - md 1`] = `
<DataList
  aria-label="this is a simple list"
  className=""
  gridBreakpoint="md"
  isCompact={false}
  selectedDataListItemId=""
  wrapModifier={null}
>
  <ul
    aria-label="this is a simple list"
    className="pf-c-data-list pf-m-grid-md"
  />
</DataList>
`;

exports[`DataList DataList variants Breakpoint - none 1`] = `
<DataList
  aria-label="this is a simple list"
  className=""
  gridBreakpoint="none"
  isCompact={false}
  selectedDataListItemId=""
  wrapModifier={null}
>
  <ul
    aria-label="this is a simple list"
    className="pf-c-data-list pf-m-grid-none"
  />
</DataList>
`;

exports[`DataList DataList variants Breakpoint - sm 1`] = `
<DataList
  aria-label="this is a simple list"
  className=""
  gridBreakpoint="sm"
  isCompact={false}
  selectedDataListItemId=""
  wrapModifier={null}
>
  <ul
    aria-label="this is a simple list"
    className="pf-c-data-list pf-m-grid-sm"
  />
</DataList>
`;

exports[`DataList DataList variants Breakpoint - xl 1`] = `
<DataList
  aria-label="this is a simple list"
  className=""
  gridBreakpoint="xl"
  isCompact={false}
  selectedDataListItemId=""
  wrapModifier={null}
>
  <ul
    aria-label="this is a simple list"
    className="pf-c-data-list pf-m-grid-xl"
  />
</DataList>
`;

exports[`DataList DataListAction button 1`] = `
<div
  className="pf-c-data-list__item-action"
>
  <Button
    id="delete-item-1"
  >
    Delete
  </Button>
</div>
`;

exports[`DataList DataListAction dropdown 1`] = `
<div
  className="pf-c-data-list__item-action"
>
  <div
    className="pf-c-data-list__action"
  >
    <Dropdown
      dropdownItems={
        Array [
          <DropdownItem
            component="button"
            onClick={[MockFunction]}
          >
            action-1
          </DropdownItem>,
          <DropdownItem
            component="button"
            onClick={[MockFunction]}
          >
            action-2
          </DropdownItem>,
        ]
      }
      isPlain={true}
      position="right"
      toggle={<KebabToggle />}
    />
  </div>
</div>
`;

exports[`DataList DataListContent 1`] = `
<section
  aria-label="Primary Content Details"
  className="pf-c-data-list__expandable-content"
  hidden={false}
  id=""
>
  <div
    className="pf-c-data-list__expandable-content-body"
  >
     test
  </div>
</section>
`;

exports[`DataList DataListContent hasNoPadding 1`] = `
<section
  aria-label="Primary Content Details"
  className="pf-c-data-list__expandable-content"
  hidden={true}
  id=""
>
  <div
    className="pf-c-data-list__expandable-content-body pf-m-no-padding"
  >
    test
  </div>
</section>
`;

exports[`DataList Item 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`DataList Item default 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`DataList List 1`] = `
<ContextProvider
  value={
    Object {
      "dragEnd": [Function],
      "dragKeyHandler": [Function],
      "dragStart": [Function],
      "drop": [Function],
      "isDraggable": false,
      "isSelectable": false,
      "selectedDataListItemId": "",
      "updateSelectedDataListItem": [Function],
    }
  }
>
  <ul
    aria-label="this is a simple list"
    className="pf-c-data-list pf-m-grid-md data-list-custom"
  />
</ContextProvider>
`;

exports[`DataList List compact 1`] = `
<ContextProvider
  value={
    Object {
      "dragEnd": [Function],
      "dragKeyHandler": [Function],
      "dragStart": [Function],
      "drop": [Function],
      "isDraggable": false,
      "isSelectable": false,
      "selectedDataListItemId": "",
      "updateSelectedDataListItem": [Function],
    }
  }
>
  <ul
    aria-label="this is a simple list"
    className="pf-c-data-list pf-m-compact pf-m-grid-md"
  />
</ContextProvider>
`;

exports[`DataList List default 1`] = `
<ContextProvider
  value={
    Object {
      "dragEnd": [Function],
      "dragKeyHandler": [Function],
      "dragStart": [Function],
      "drop": [Function],
      "isDraggable": false,
      "isSelectable": false,
      "selectedDataListItemId": "",
      "updateSelectedDataListItem": [Function],
    }
  }
>
  <ul
    aria-label="this is a simple list"
    className="pf-c-data-list pf-m-grid-md"
  />
</ContextProvider>
`;

exports[`DataList List draggable 1`] = `
<ContextProvider
  value={
    Object {
      "dragEnd": [Function],
      "dragKeyHandler": [Function],
      "dragStart": [Function],
      "drop": [Function],
      "isDraggable": true,
      "isSelectable": false,
      "selectedDataListItemId": "",
      "updateSelectedDataListItem": [Function],
    }
  }
>
  <ul
    aria-label="this is a simple list"
    className="pf-c-data-list pf-m-compact pf-m-grid-md"
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  />
</ContextProvider>
`;

exports[`DataList item row default 1`] = `
<div
  className="pf-c-data-list__item-row"
/>
`;
